[project]
name = "icu-drug-titration"
version = "1.0.0"
description = "OpenEnv ICU drug titration environment"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "httpx",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"
